--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,34 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  jobs:
+    details:
+      apply: 'Apply for this position...'
+    index:
+      preview:
+        featured: 'Featured'
+        location: 'Location: Congo🇨🇩'
+    new:
+      page_title: 'Create Job'
+      labels:
+        title: 'Title'
+        application_url: 'Application url'
+        company: 'Company'
+        select_company: 'Select Company'
+        description: 'Description'
+        get_in_touch: 'Get in touch'
+  navigation:
+    anity_logo: 'Anity'
+    all_jobs: 'All jobs'
+    community: 'Community'
+    get_in_touch: 'Get in touch'
+  companies:
+    new:
+      create_company: 'Create Company'
+      labels:
+        name: 'Name'
+        description: 'Description'
+        create_company: 'Create Company'
+
+
+  
