--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,7 +32,7 @@
 en:
   jobs:
     details:
-      apply: 'Apply for this position...'
+      apply: 'Apply for this position'
     index:
       preview:
         featured: 'Featured'
@@ -46,8 +46,8 @@ en:
         select_company: 'Select Company'
         description: 'Description'
         get_in_touch: 'Get in touch'
-        apply: 'Apply for this position'
         location: 'Location'
+        create: 'Create Job'
   navigation:
     anity_logo: 'Anity'
     all_jobs: 'All jobs'
