--- a/config/locales/clearance.en.yml
+++ b/config/locales/clearance.en.yml
@@ -56,6 +56,7 @@ en:
     form:
       forgot_password: Forgot password?
       sign_up: Sign up
+      sign_in: Sign in
     new:
       title: Sign in
   users:
